Changed hello html

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>Hello, SmartNinja!</h1>
+    <h1>Hello, Bmailer in app!</h1>
     {% for oseba in seznam %}
         <ul>
             <li>{{ oseba.first_name }}</li>
