--- a/templates/message.html
+++ b/templates/message.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+    <div class="well">
+        <form action='/result' method="post">
+            <label for="in_message">Message:</label>
+            <br>
+            <br>
+            <input name="message" id="in_message">
+            <br>
+            <br>
+            <label for="in_sender">Sender:</label>
+            <br>
+            <br>
+            <input name="sender" type="email" id="in_sender">
+            <br>
+            <br>
+            <label for="in_receiver">Receiver:</label>
+            <br>
+            <br>
+            <input name="receiver" type="email" id="in_receiver">
+            <br>
+            <br>
+            <button class="btn btn-success" type="submit">Ok</button>
+        </form>
+    </div>
+
+{% endblock content %}
