--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,32 @@ body {
     background-color: #00bfff;
 }
 
+.btn {
+    color: #000000;
+}
+
+.btn:hover {
+    color: #ff8c00;
+}
+
+.btn-warning:hover {
+    color: #449d44;
+}
+
+.container {
+    text-align: center;
+}
+
+.well > ul{
+    list-style-type: none;
+    padding-left: 2em; text-indent: -2em;
+}
+
+.modal,
+.modal-body,
+.modal-body > .well,
+.modal-header,
+.modal-footer {
+    background-color: #00bfff;
+    border: 0px;
+}
