--- a/templates/all_messages.html
+++ b/templates/all_messages.html
@@ -1,10 +1,36 @@
 {% extends "base.html" %}
 
+{% block li1 %}
+    <li><a  class="page-scroll" href="/">Homepage </a></li>
+{% endblock li1 %}
+
+{% block li2 %}
+    <li class="active"><a  class="page-scroll" href="/all_messages">All Messages </a></li>
+{% endblock li2 %}
+
+{% block li3 %}
+    <li><a  class="page-scroll" href="/received_mail">Received mail </a></li>
+{% endblock li3 %}
+
+{% block li4 %}
+    <li><a  class="page-scroll" href="/sent_mail">Sent mail </a></li>
+{% endblock li4 %}
+
+{% block li5 %}
+    <li><a  class="page-scroll" href="/vreme">Vreme </a></li>
+{% endblock li5 %}
+
+{% block li6 %}
+    <li><a  class="page-scroll" href="/message">Sending mail </a></li>
+{% endblock li6 %}
+
 {% block content %}
 
     <div class="well">
-        <h1>List of messages:</h1>
-
+        <h2>List of messages:</h2>
+        <a href="/" role="button" class="btn btn-warning">Pojdi na glavno stran</a>
+        <br>
+        <br>
         {% for message in messages %}
           <ul>
             <a href="/single_message/{{ message.key.id() }}">
