--- a/templates/edit_message.html
+++ b/templates/edit_message.html
@@ -2,7 +2,10 @@
 
 {% block content %}
     <div class="well">
-        <h1>You can edit this message</h1>
+        <h2>You can edit this message</h2>
+        <a href="/" role="button" class="btn btn-warning">Pojdi na glavno stran</a>
+        <br>
+        <br>
         <form action="/single_message/{{ message.key.id() }}/edit" method="post">
             <label for="in_message">Message:</label>
             <br>
