--- a/templates/received_mail.html
+++ b/templates/received_mail.html
@@ -1,8 +1,35 @@
 {% extends "base.html" %}
 
+{% block li1 %}
+    <li><a  class="page-scroll" href="/">Homepage </a></li>
+{% endblock li1 %}
+
+{% block li2 %}
+    <li><a  class="page-scroll" href="/all_messages">All Messages </a></li>
+{% endblock li2 %}
+
+{% block li3 %}
+    <li class="active"><a  class="page-scroll" href="/received_mail">Received mail </a></li>
+{% endblock li3 %}
+
+{% block li4 %}
+    <li><a  class="page-scroll" href="/sent_mail">Sent mail </a></li>
+{% endblock li4 %}
+
+{% block li5 %}
+    <li><a  class="page-scroll" href="/vreme">Vreme </a></li>
+{% endblock li5 %}
+
+{% block li6 %}
+    <li><a  class="page-scroll" href="/message">Sending mail </a></li>
+{% endblock li6 %}
+
 {% block content %}
-    <div class="jumbotron">
-        <h1>Received mail here!</h1>
+    <div class="well">
+        <h2>Received mail here!</h2>
+        <a href="/" role="button" class="btn btn-warning">Pojdi na glavno stran</a>
+        <br>
+        <br>
         {% for message in m_receiver %}
           <ul>
                 <li>Message is: {{ message.message }}.</li>
@@ -12,5 +39,7 @@
           </ul>
         {% endfor %}
     </div>
+
+
 
 {% endblock content %}
