--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,13 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li class="Options of Bmail">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opcije <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
+                  <li>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                          Opcije <span class="caret"></span>
+                      </a>
+                  <ul class="dropdown-menu" id="ulBlock" role="menu">
                     <li>{% block li1 %}{% endblock li1 %}</li>
                     <li>{% block li2 %}{% endblock li2 %}</li>
                     <li>{% block li3 %}{% endblock li3 %}</li>
